--- a/app/src/main/res/layout/list_student_group.xml
+++ b/app/src/main/res/layout/list_student_group.xml
@@ -3,31 +3,45 @@
 <LinearLayout android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="horizontal"
-    android:paddingTop="8dp"
-    android:paddingLeft="16dp"
-    android:paddingRight="16dp"
     android:descendantFocusability="blocksDescendants"
     xmlns:android="http://schemas.android.com/apk/res/android">
+
+    <View
+        android:layout_width="1dp"
+        android:layout_height="match_parent"
+        android:background="@color/black"/>
 
     <TextView
         android:id="@+id/textView_groupnum_instudentlist"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="7"
+        android:layout_weight="8"
         android:clickable="false"
         android:text="TextView"
-        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-        android:textColor="#de000000" />
+        android:padding="5dp"
+        android:textSize="20sp"
+        android:textColor="@color/black" />
+
+    <View
+        android:layout_width="1dp"
+        android:layout_height="match_parent"
+        android:background="@color/black"/>
 
     <TextView
         android:id="@+id/textView_studentID_instudentlist"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="6"
+        android:layout_weight="8"
         android:clickable="false"
         android:text="TextView"
-        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-        android:textColor="#de000000"/>
+        android:padding="5dp"
+        android:textSize="20sp"
+        android:textColor="@color/black"/>
+
+    <View
+        android:layout_width="1dp"
+        android:layout_height="match_parent"
+        android:background="@color/black"/>
 
     <TextView
         android:id="@+id/textView_fullname_instudentlist"
@@ -36,8 +50,14 @@
         android:layout_weight="6"
         android:clickable="false"
         android:text="TextView"
-        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-        android:textColor="#de000000"/>
+        android:padding="5dp"
+        android:textSize="20sp"
+        android:textColor="@color/black"/>
+
+    <View
+        android:layout_width="1dp"
+        android:layout_height="match_parent"
+        android:background="@color/black"/>
 
     <TextView
         android:id="@+id/textView_email_instudentlist"
@@ -46,7 +66,13 @@
         android:layout_weight="5"
         android:clickable="false"
         android:text="TextView"
-        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-        android:textColor="#de000000"/>
+        android:padding="5dp"
+        android:textSize="20sp"
+        android:textColor="@color/black"/>
 
-    </LinearLayout>
+    <View
+        android:layout_width="1dp"
+        android:layout_height="match_parent"
+        android:background="@color/black"/>
+
+</LinearLayout>
