--- a/app/src/main/res/layout/dialog_add_comment.xml
+++ b/app/src/main/res/layout/dialog_add_comment.xml
@@ -19,6 +19,7 @@
             android:layout_height="wrap_content"
             android:textSize="20sp"
             android:text="Subsection:"
+            android:layout_centerVertical="true"
             android:textColor="@color/black"
             android:textAppearance="@style/TextAppearance.AppCompat.Large" />
 
@@ -40,6 +41,7 @@
         android:background="#e4e4e4" />
 
     <RelativeLayout
+        android:id="@+id/relativellayout_new_subsection"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingLeft="16dp"
@@ -52,7 +54,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
-            android:text="Others:"
+            android:text="New Subsection:"
             android:textSize="20sp"
             android:textColor="@color/black"
             android:textAppearance="@style/TextAppearance.AppCompat.Large" />
@@ -79,6 +81,7 @@
         android:background="#e4e4e4" />
 
     <RelativeLayout
+        android:id="@+id/relativelayout_new_comment_spinner"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingLeft="16dp"
@@ -97,7 +100,8 @@
             android:id="@+id/textView_shortText_addComment"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="ShortText:"
+            android:text="Comment:"
+            android:layout_centerVertical="true"
             android:textSize="20sp"
             android:textColor="@color/black"
             android:textAppearance="@style/TextAppearance.AppCompat.Large" />
@@ -113,6 +117,7 @@
         android:background="#e4e4e4" />
 
     <RelativeLayout
+        android:id="@+id/relativellayout_new_comment"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingLeft="16dp"
@@ -138,7 +143,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
-            android:text="Others:"
+            android:text="New comment:"
             android:textSize="20sp"
             android:textColor="@color/black"
             android:textAppearance="@style/TextAppearance.AppCompat.Large" />
@@ -160,7 +165,7 @@
             android:id="@+id/textView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="1-negative, 2-mediocre and 3-positive"
+            android:text="1 - negative, 2 - mediocre and 3 - positive"
             android:layout_below="@id/editText_shortTextgrade_addComment"
             android:layout_alignLeft="@id/editText_shortTextgrade_addComment"
             android:layout_marginLeft="3dp"
@@ -205,7 +210,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
             android:textSize="20sp"
-            android:text="LongText:"
+            android:text="Expanded Comment:"
             android:textAppearance="@style/TextAppearance.AppCompat.Large" />
     </RelativeLayout>
 
