--- a/app/src/main/res/layout/list_item_spinner.xml
+++ b/app/src/main/res/layout/list_item_spinner.xml
@@ -8,5 +8,12 @@
         android:layout_height="wrap_content"
         android:text="TextView"
         android:textColor="@color/black"
+        android:padding="10dp"
         android:textSize="20sp"/>
+
+    <View
+        android:layout_below="@id/textView_content_spinner"
+        android:layout_width="wrap_content"
+        android:layout_height="2dp"
+        android:background="@color/black"/>
 </RelativeLayout>
