--- a/app/src/main/res/layout/dialog_help.xml
+++ b/app/src/main/res/layout/dialog_help.xml
@@ -28,7 +28,6 @@
                     android:layout_alignParentStart="true"
                     android:text="Template"
                     android:textSize="30sp"
-                    android:textStyle="bold"
                     android:paddingTop="10dp"
                     android:paddingStart="16dp"
                     android:textColor="@color/black"/>
@@ -40,6 +39,7 @@
                 android:layout_width="match_parent"
                 android:layout_below="@id/linearlayout_dialog_help"
                 android:layout_height="2dp"
+                android:layout_marginBottom="10dp"
                 android:background="@color/colorPrimary" />
 
             <ImageView
